--- a/assets/styles/forms/themes/_warning.css
+++ b/assets/styles/forms/themes/_warning.css
@@ -7,8 +7,7 @@
     --theme-form-input-outline: white;
     --theme-form-input-outline-active: var(--orange-6);
     --theme-form-input-outline-focus: var(--orange-6);
-    --theme-form-input-text: light-dark(var(--gray-11), var(--gray-11));
-
+    --theme-form-input-text: light-dark(var(--gray-10), var(--gray-11));
     --theme-form-focus-box-shadow: 1px 1px 8px 1px var(--orange-12);
 
     --theme-form-checkbox-bg: light-dark(var(--gray-1), var(--gray-4));
